# capstone

./: .gitmodules  HouseHeatingSystemNoBoiler.slx  HouseHeatingSystemPlotQS.m  HouseHeatingSystemPlotTemps.m  HouseHeatingSystemV2.slx  Power_SchematicWITHFOOTPRINTS.PcbDoc  Power_SchematicWITHFOOTPRINTS.SchDoc  README.md
ESP-tests/ot_rcp/: sdkconfig  sdkconfig.old
HouseHeatingSystemExampleJH/: HouseHeatingSystem.slx.autosave  HouseHeatingSystem.slxc  HouseHeatingSystemFluidProp.m
Rev2_prototype/firmware/Rev2-1/main/: BMP280.c  BMP280.h  CMakeLists.txt  Kconfig.projbuild  MLX90614.c  MLX90614.h  crc8.py  esp_http_client.c  esp_http_client.h  esp_http_client_task.c  esp_http_client_task.h  idf_component.yml  main.c  protocol_examples_common.h  protocol_examples_utils.h  servo.c  servo.h
Simulation/: HouseHeatingSystemExample.m  HouseHeatingSystemPlotTemps.m
simulations/: HouseHeatingSystemNoBoiler.slx  HouseHeatingSystemV2.slx
simulations/HouseHeatingSystemExampleJH/: HouseHeatingSystem.slx  HouseHeatingSystemExample.m  HouseHeatingSystemPlot1T.m  HouseHeatingSystemPlot2Fuel.m  furnace.ssc
simulations/Simulation/: HouseHeatingSystemPlotQS.m
solar_monitor/: README.md  platformio.ini
solar_monitor/data/: Recording_1.csv  Recording_2.csv  Recording_3.csv  Recording_4.csv  Recording_5.csv
solar_monitor/examples/: LightSensorSDRTC.ino  RTCCheckBattery.ino
solar_monitor/include/: globals.h  util.h
thermometer-ui/: app.py  thermostat_settings.json  vent_log.csv
vent-validation/: apr_2024_waterloo_weather.csv  temp_plots.ipynb  vent_log.csv  vent_plots.ipynb
(+127 files in other folders)
